--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <!-- Link to your JavaScript file -->
+  <script src="scripts/index.js"></script>
 
   <title>Shervin Rahmanian</title>
   <meta content="" name="description">
@@ -28,21 +30,12 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
@@ -54,7 +47,8 @@
               <span>Portfolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
+      <!-- End nav-menu -->
       <div class="profile">
         <div class="social-links mt-3 text-center">
           <a href="#" class="github"><i class="bi bi-github"></i></a>
@@ -64,10 +58,8 @@
     </div>
   </header>
   <!-- End Header -->
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-
     <div class="hero-container" data-aos="fade-in">
       <h1><b>Shervin Rahmanian</b></h1>
       <p><b>I'm <span class="typed" data-typed-items="Developer, Designer, Freelancer"></b></span></p>
@@ -75,21 +67,11 @@
     <iframe
       src="https://player.vimeo.com/video/824762897?h=2fefec4c82&amp;badge=0&amp;autoplay=1&amp;loop=1&amp;muted=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
       frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-      style="position:absolute;top:0;left: 9%;width:100%;height:100%;min-height: 100%; object-fit: cover;overflow: hidden;z-index: -1;" title="Background">
+      style="position:absolute;top:0;left: 9%;width:100%;height:100%;min-height: 100%; object-fit: cover;overflow: hidden;z-index: -1;"
+      title="Background">
     </iframe>
   </section>
-
-  <!-- <div style="padding:76.92% 0 0 0;position:relative;">
-    <iframe
-      src="https://player.vimeo.com/video/824762897?h=2fefec4c82&amp;badge=0&amp;autoplay=1&amp;loop=1&amp;muted=1&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-      frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-      style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Background">
-    </iframe>
-  </div>
-  <script src="https://player.vimeo.com/api/player.js"></script> -->
-
   <main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
@@ -189,8 +171,8 @@
               </video>
 
               <div class="portfolio-links">
-                <a href="https://github.com/SherWin-max" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/SherWin-max" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bi bi-github"></i></a>
                 <a href="https://github.com/SherWin-max" title="More Details"><i class="bi bi-browser-chrome"></i></a>
               </div>
             </div>
@@ -203,11 +185,12 @@
                 <source src="assets/img/portfolio/Project.mp4" type="video/mp4">
                 <!-- Add additional source tags here for other video formats if needed -->
               </video>
-              
+
               <div class="portfolio-links">
                 <a href="https://github.com/SherWin-max/Slingair" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bi bi-github"></i></a>
-                <a href="https://github.com/SherWin-max/Slingair" title="More Details"><i class="bi bi-browser-chrome"></i></a>
+                <a href="https://github.com/SherWin-max/Slingair" title="More Details"><i
+                    class="bi bi-browser-chrome"></i></a>
               </div>
             </div>
           </div>
@@ -222,7 +205,8 @@
               <div class="portfolio-links">
                 <a href="https://github.com/SherWin-max/Critter" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 2"><i class="bi bi-github"></i></a>
-                <a href="https://github.com/SherWin-max/Critter" title="More Details"><i class="bi bi-browser-chrome"></i></a>
+                <a href="https://github.com/SherWin-max/Critter" title="More Details"><i
+                    class="bi bi-browser-chrome"></i></a>
               </div>
             </div>
           </div>
@@ -237,7 +221,8 @@
               <div class="portfolio-links">
                 <a href="https://github.com/SherWin-max/News-platform" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Card 2"><i class="bi bi-github"></i></a>
-                <a href="https://github.com/SherWin-max/News-platform" title="More Details"><i class="bi bi-browser-chrome"></i></a>
+                <a href="https://github.com/SherWin-max/News-platform" title="More Details"><i
+                    class="bi bi-browser-chrome"></i></a>
               </div>
             </div>
           </div>
@@ -348,7 +333,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
